--- a/network_policy/04-allow-all-ingress-from-all-namespaces.yaml
+++ b/network_policy/04-allow-all-ingress-from-all-namespaces.yaml
@@ -1,14 +1,12 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: api-allow
+  name: web-allow-all-namespaces
 spec:
   podSelector:
     matchLabels:
-      app: hello-openshift
+      app: hello-openshishift
   ingress:
   - from:
-      - podSelector:
-          matchLabels:
-            app: test-client
+    - namespaceSelector: {}
 
