--- a/network_policy/09-deny-all-ingress-egress.yaml
+++ b/network_policy/09-deny-all-ingress-egress.yaml
@@ -1,10 +1,10 @@
----
-apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
 metadata:
-  name: default-deny-egress
+  name: pod-deny-all-ingress-egress
 spec:
   podSelector: {}
   policyTypes:
+  - Ingress
   - Egress
 
